responsive a medias xd

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Omar_Mendoza</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- fontawesome -->
 		<script src="https://kit.fontawesome.com/acb30b3f49.js" crossorigin="anonymous"></script>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,6 +17,7 @@
 	</head>
 	<body>
 		<header>
+
 			<div class="header">
 				<i class="fas fa-meteor fa-7x header__icon"></i>
 				<h1 class="header__title">Omar_Mendoza</h1>
